--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <title>Projeto Gamer Manhã</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,138 +16,88 @@
     <header>
 
         <div class="header-top">
+            <div class="layout-grid">
+                <div class="contatos">
+                    <div class="phone">
+                        <img src="./assets/icons/icone_telefone.svg" alt="Ícone de telefone">
+                        <span>(11) 0900-1010</span>
+                    </div>
+                    <div class="email">
+                        <img src="./assets/icons/icone_email.svg" alt="Ícone de e-mail">
+                        <span>contato@gamer.com.br</span>
+                    </div>
+                </div>
 
-
-            <div class="phone">
-                <img src="" alt="Ícone Telefone">
-                <span>(11) 0900-1010</span>
+                <div class="midias-sociais">
+                    <a href="">
+                        <img src="./assets/icons/facebook.svg" alt="Imagem link do Facebook da empresa Gamer">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa Gamer">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/intagram.svg" alt="Imagem link do Instagram da empresa Gamer">
+                    </a>
+                </div>
             </div>
-
-
-            <div class="email">
-                <img src="" alt="ícone email">
-                <span>contato@gamer.com.br</span>
-
-            </div>
-
-
-
-            <div class="social-midias">
-
-                <a href="">
-                    <img src="" alt="Imagem link do Facebook da empresa">
-
-
-                </a>
-
-
-                <a href="">
-                    <img src="" alt="Imagem link do Linked In da empresa">
-
-
-                </a>
-
-
-                <a href="">
-                    <img src="" alt="Imagem link do Instagram da empresa">
-
-
-                </a>
-
-
-            </div>
-
-
         </div>
 
         <div class="header-bottom">
-            <!-- menu hamburguer -->
+            <div class="layout-grid alinhamento-between-center">
+                <!-- menu hamburger -->
+                <img src="../Projeto-Gamer/ASSETS/ICONS/Menu Hamburguer.png" class="menu-hamburger"
+                    alt="Ícone para abrir e fechar o menu de celular">
 
-            <img class="menu hamburguer" src="../Projeto Gamer/ASSETS/ICONS/Menu Hamburguer.png" alt="Icone para abrir e fechar o menu mobile">
+                <img class="logo" src="../Projeto-Gamer/ASSETS/IMAGES/logotipo-gamer.png"
+                    alt="Logotipo da empresa. Texto Gamer com um joystick ao centro">
 
-            <a href=" ">
-                <img class="logo" src="../Projeto Gamer/ASSETS/IMAGES/logotipo-gamer.png"
-                    alt="Logotipo-Gamer-Palavra gamer escrita em branco com um controle de videogame laranja no centro">
-            </a>
+                <nav class="menu">
+                    <a href="">Início</a>
+                    <a href="">Jogadores</a>
+                    <a href="">Equipes</a>
+                    <a href="">Notícias</a>
 
-            <nav>
-                <a href="">Início</a>
+                    <!-- visível apenas no mobile -->
 
-                <a href="">Jogadores</a>
+                    <div class="phone">
+                        <img src="./assets/icons/icone_telefone.svg" alt="Ícone de telefone">
+                        <span>(11) 0900-1010</span>
+                    </div>
+                    <div class="email">
+                        <img src="./assets/icons/icone_email.svg" alt="Ícone de e-mail">
+                        <span>contato@gamer.com.br</span>
+                    </div>
 
-                <a href="">Equipe</a>
+                    <div class="midias-sociais">
+                        <a href="">
+                            <img src="./assets/icons/facebook.svg" alt="Imagem link do Facebook da empresa Gamer">
+                        </a>
+                        <a href="">
+                            <img src="./assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa Gamer">
+                        </a>
+                        <a href="">
+                            <img src="./assets/icons/intagram.svg" alt="Imagem link do Instagram da empresa Gamer">
+                        </a>
+                    </div>
+                </nav>
 
-                <a href="">Notícias</a>
+                <!-- menu 3 pontinhos -->
+                <img src="../Projeto-Gamer/ASSETS/ICONS/Pontinhos.png" class="menu-pontinhos"
+                    alt="Ícone 3 pontinhos, abre o menu de usuários">
 
-
-                <!-- mostra apenas no mobile -->
-
-
-                <div class="phone">
-                    <img src="../Projeto Gamer/ASSETS/ICONS/icone_telefone.png" alt="Ícone Telefone">
-                    <span>(11) 0900-1010</span>
+                <div class="menu-usuarios">
+                    <a href="">
+                        <img src="./assets/icons/user.svg" alt="Ícone de perfil">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/bag.png" alt="Ícone de sacola">
+                    </a>
+                    <a href="">
+                        <img src="./assets/icons/search.svg" alt="Ícone lupa de pesquisa">
+                    </a>
                 </div>
-
-
-                <div class="email">
-                    <img src="../Projeto Gamer/ASSETS/ICONS/icone_email.png" alt="ícone email">
-                    <span>contato@gamer.com.br</span>
-
-                </div>
-
-
-                <a href="">
-                    <img src="../Projeto Gamer/ASSETS/ICONS/Icone FAcebook.png" alt="Imagem link do Facebook da empresa">
-
-
-                </a>
-
-
-                <a href="">
-                    <img src="../Projeto Gamer/ASSETS/ICONS/Icone Linked in.png" alt="Imagem link do Linked In da empresa">
-
-
-                </a>
-
-
-                <a href="">
-                    <img src="../Projeto Gamer/ASSETS/ICONS/Icone Instagram.png" alt="Imagem link do Instagram da empresa">
-
-
-                </a>
-
-                <!-- Menu pontinhos -->
-                <img class="menu-pontinho" src="" alt="">
-
-            </nav>
-
-
-
-
-
-
-            <div class="menu-usuarios">
-
-                <a href="">
-                    <img src="" alt="Icone Perfil">
-
-                </a>
-                <a href="">
-                    <img src="" alt="Icone Sacola">
-
-                </a>
-                <a href="">
-                    <img src="" alt="Icone Pesquisa">
-
-
-                </a>
-
             </div>
-
         </div>
-
-
-
     </header>
 
 </body>
